--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^6.2.0",
     "lodash": "^4.17.11",
     "neo4j-driver": "^1.7.2",
+    "prettify-json": "^0.3.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
